<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/coverImage"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/cover"
        android:contentDescription="@string/cover_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="160dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@+id/coverImage"
        app:layout_constraintBottom_toBottomOf="@+id/coverImage"
        app:srcCompat="@drawable/profile"
        android:contentDescription="@string/profile_image" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/md_samaruddin"
        android:textColor="#0097A7"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/profile_img"
        app:layout_constraintTop_toBottomOf="@+id/coverImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="5dp"
        android:layout_marginEnd="15dp"
        android:textSize="20sp"
        android:text="@string/android_developer"
        />

    <ImageView
        android:id="@+id/dice_img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/dice1"
        app:layout_constraintTop_toBottomOf="@+id/profile_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="110dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/dice_img2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/dice1"
        app:layout_constraintTop_toBottomOf="@+id/profile_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="80dp"
        android:layout_marginStart="110dp"
        android:contentDescription="@string/num" />



    <TextView
        android:id="@+id/descView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_img1"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#0522F8"
        android:padding="5dp"
        android:layout_marginEnd="110dp"
        android:text="@string/num"/>


    <TextView
        android:id="@+id/descView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice_img2"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:textColor="#0522F8"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_marginStart="110dp"
        android:text="@string/num"/>

    <TextView
        android:id="@+id/sumId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/descView2"
        android:text="@string/sum"
        android:textColor="#50FF05"
        android:textSize="22sp"
        android:textStyle="bold"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rollbtn"
        android:layout_marginBottom="12dp"

        />
    <Button
        android:id="@+id/rollbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descView1"
        android:layout_marginTop="50dp"
        android:text="@string/roll"
        android:backgroundTint="@color/black"
        android:textSize="30sp"

        />


</androidx.constraintlayout.widget.ConstraintLayout>